@startuml

title __CARS's Class Diagram__\n

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        abstract class Car {
            - nrDoors : int
            - color : Color
            + Car()
            + getColor()
            + getType()
            + setColor()
            {abstract} + speedFactor()
            + incrementSpeed()
            + decrementSpeed()
            + getNrDoors()
            + gas()
            + brake()
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        enum Type {
          SEDAN
          TRUCK
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        class Saab95 {
            + turboOn : boolean
            + Saab95()
            + setTurboOn()
            + setTurboOff()
            + speedFactor()
            + getTurboStatus()
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        enum Type {
          SEDAN
          TRUCK
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        class Volvo240 {
            {static} - trimFactor : double
            + Volvo240()
            + speedFactor()
        }
      }
    }
  }
  

  package main {
    package main.vehicles {
      package main.vehicles.cars {
        enum Type {
          SEDAN
          TRUCK
        }
      }
    }
  }
  

  Car -up-|> Vehicle
  Car o-- Type : type
  Car +-down- Type
  Saab95 -up-|> Car
  Saab95 +-down- Type
  Volvo240 -up-|> Car
  Volvo240 +-down- Type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
